--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
-  "dependencies": {
-    "jquery": "^3.6.0",
-    "js-cookie": "^3.0.1"
-  }
+    "dependencies": {
+        "ejs": "^3.1.6",
+        "express": "^4.17.3",
+        "express-session": "^1.17.2",
+        "jquery": "^3.6.0",
+        "js-cookie": "^3.0.1",
+        "mongoose": "^6.3.0",
+        "passport": "^0.5.2",
+        "passport-local": "^1.0.0",
+        "passport-local-mongoose": "^7.0.0"
+    },
+    "devDependencies": {
+        "dotenv": "^16.0.0",
+        "nodemon": "^2.0.15"
+    }
 }
